<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNameApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/baloo_paaji"
                android:text="@string/easy_food1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgNotifycation"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_8sdp"
                android:padding="@dimen/_6sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_8sdp"
                android:padding="@dimen/_6sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/trolley"
                app:layout_constraintEnd_toStartOf="@id/imgNotifycation"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/edt_search"
                android:drawableStart="@drawable/seach"
                android:drawablePadding="@dimen/_4sdp"
                android:ems="10"
                android:fontFamily="@font/amarante"
                android:hint="Tìm cửa hàng hay sản phẩm"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvNameApp" />

            <View
                android:id="@+id/viewLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E9EBEC"
                app:layout_constraintTop_toBottomOf="@id/edtSearch" />

            <TextView
                android:id="@+id/tvStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_19sdp"
                android:fontFamily="@font/baloo_paaji"
                android:gravity="center_horizontal"
                android:text="@string/c_a_h_ng"
                android:textAlignment="center"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewLine" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvStoreHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvStore" />

            <TextView
                android:id="@+id/tvHintFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_19sdp"
                android:fontFamily="@font/baloo_paaji"
                android:gravity="center_horizontal"
                android:text="@string/g_i"
                android:textAlignment="center"
                android:textColor="#D94247"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvStoreHorizontal" />

            <TextView
                android:id="@+id/tvSeeAllFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/baloo_paaji"
                android:gravity="center_horizontal"
                android:text="Xem tất cả"
                android:textAlignment="center"
                android:textColor="#74C8F5"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@id/rcvFoodHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvStoreHorizontal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFoodHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvHintFood" />

            <TextView
                android:id="@+id/tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_19sdp"
                android:fontFamily="@font/baloo_paaji"
                android:gravity="center_horizontal"
                android:text="Ưu đãi,khuyến mãi"
                android:textAlignment="center"
                android:textColor="#D94247"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvFoodHint" />
            <TextView
                android:id="@+id/tvSeeAllDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/baloo_paaji"
                android:gravity="center_horizontal"
                android:text="Xem tất cả"
                android:textAlignment="center"
                android:textColor="#74C8F5"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toTopOf="@id/rcvDiscount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvFoodHint" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvDiscount" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</ScrollView>